[package]
name = "relaycraft"
version = "0.99.1"
description = "RelayCraft - Powerful HTTP Proxy Tool"
authors = ["RelayCraft Team"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.10.0", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-log = "2"
tauri-plugin-http = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
local-ip-address = "0.5"
dirs = "6.0.0"
sysinfo = "0.33"
regex = "1"
libc = "0.2"
lazy_static = "1.4"
log = "0.4"
simplelog = "0.12"
chrono = "0.4"
keyring = { version = "3.6.3", features = ["windows-native", "apple-native", "sync-secret-service"] }
reqwest = { version = "0.13.1", features = ["json", "gzip", "brotli", "deflate", "stream"] }
futures-util = "0.3"
uuid = { version = "1", features = ["v4"] }
url = "2"
tauri-plugin-fs = "2.4.5"
tokio = { version = "1", features = ["process", "rt-multi-thread"] }
tauri-plugin-process = "2"
rcgen = "0.13"
time = { version = "0.3", features = ["macros"] }
anyhow = "1.0"
walkdir = "2"
zip = "2.2"
tauri-plugin-single-instance = "2.3.7"
thiserror = "2.0"
sha1 = "0.10.6"
base64 = "0.22.1"
hex = "0.4.3"
pem = "3.0.6"

[dev-dependencies]
tempfile = "3"
rstest = "0.23"
pem = "3.0.6"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25"
objc = "0.2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
